tests/baselines/reference/indexSignatureWithInitializer.errors.txt
tests/cases/compiler/indexSignatureWithInitializer.ts(3,5): error TS1169: A computed property name in an interface must directly refer to a built-in symbol.
tests/cases/compiler/indexSignatureWithInitializer.ts(3,6): error TS2304: Cannot find name 'x'.
tests/cases/compiler/indexSignatureWithInitializer.ts(7,5): error TS1166: A computed property name in a class property declaration must directly refer to a built-in symbol.
tests/cases/compiler/indexSignatureWithInitializer.ts(7,6): error TS2304: Cannot find name 'x'.


==== tests/cases/compiler/indexSignatureWithInitializer.ts (4 errors) ====
    // These used to be indexers, now they are computed properties
    interface I {
        [x = '']: string;
        ~~~~~~~~
!!! error TS1169: A computed property name in an interface must directly refer to a built-in symbol.
         ~
!!! error TS2304: Cannot find name 'x'.
    }
    
    class C {
        [x = 0]: string
        ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must directly refer to a built-in symbol.
         ~
!!! error TS2304: Cannot find name 'x'.
    }